--- a/css/style.css
+++ b/css/style.css
@@ -7861,7 +7861,7 @@ html {
 .center-container {
   margin: 0 auto;
   max-width: 124rem;
-  padding: 0 10rem;
+  padding: 0 5rem;
 }
 
 .grid {
@@ -8076,6 +8076,7 @@ input.hero-form::placeholder {
 }
 
 .offer-card-container {
+  padding: 5rem 0;
   gap: 3.6rem;
 }
 
@@ -8083,7 +8084,6 @@ input.hero-form::placeholder {
   background-color: var(--white);
   height: 20rem;
   weight: 28rem;
-  margin-top: 5rem;
   border-radius: 16px;
   background-color: var(--light-gray);
   -webkit-border-radius: 16px;
@@ -8124,7 +8124,7 @@ input.hero-form::placeholder {
   grid-template-rows: min-content 1fr min-content;
   background-color: var(--white);
   height: 28.6rem;
-  width: 30rem;
+  width: 33rem;
   border-radius: 16px;
   -webkit-border-radius: 16px;
   -moz-border-radius: 16px;
@@ -8153,6 +8153,7 @@ input.hero-form::placeholder {
 .Best-selling-product-bg-container__inner__card-item {
   display: flex;
   padding: 0 2rem;
+  gap: 5px;
 }
 .Best-selling-product-bg-container__inner__card-item--right {
   align-self: center;
@@ -8160,7 +8161,7 @@ input.hero-form::placeholder {
 .Best-selling-product-bg-container__inner__card-item--left {
   padding-top: 3rem;
   display: flex;
-  gap: 15px;
+  gap: 5px;
   flex-direction: column;
   font-weight: 600;
 }
@@ -8201,6 +8202,14 @@ input.hero-form::placeholder {
 .card-container {
   padding: 5rem 0;
   grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
-  gap: 2rem;
+  gap: 3rem;
   justify-items: center;
+}
+
+.Best-selling-product-bg-container--top-product {
+  background-color: var(--white);
+}
+
+.Best-selling-product-bg-container__inner__card--top-product-card {
+  box-shadow: 0 0 10px 2px rgba(0, 0, 0, 0.1);
 }/*# sourceMappingURL=style.css.map */
