--- a/scss/_Best-selling-product.scss
+++ b/scss/_Best-selling-product.scss
@@ -16,7 +16,7 @@
     grid-template-rows:min-content 1fr min-content;
     background-color: var(--white);
     height:28.6rem;
-    width:30rem;
+    width:33rem;
     border-radius: 16px;
     -webkit-border-radius: 16px;
     -moz-border-radius: 16px;
@@ -44,8 +44,8 @@
    
 &-item{
       display: flex;
-    //   height:100%;
       padding: 0 2rem;
+      gap:5px;
 
     &--right{
         align-self:center;
@@ -53,7 +53,7 @@
     &--left{
         padding-top:3rem;
         display:flex;
-        gap:15px;
+        gap:5px;
         flex-direction: column;
         font-weight: 600;
         & h2{
@@ -103,6 +103,12 @@
 .card-container{
     padding:5rem 0;
     grid-template-columns:repeat(auto-fit, minmax(30rem,1fr));
-    gap:2rem;
+    gap:3rem;
     justify-items: center;
+}
+.Best-selling-product-bg-container--top-product{
+    background-color:var(--white);
+}
+.Best-selling-product-bg-container__inner__card--top-product-card{
+    box-shadow: 0 0 10px 2px rgba(0, 0, 0, 0.1);
 }
