--- a/scss/style.scss
+++ b/scss/style.scss
@@ -5,4 +5,8 @@
 @import "helperclasses";
 @import "header";
 @import "hero";
-@import "Best-selling-product"
+@import "Best-selling-product";
+@import "netflix-packages";
+@import "active-Promotions";
+@import "email-subscribe";
+@import "footer"
