--- a/scss/_email-subscribe.scss
+++ b/scss/_email-subscribe.scss
@@ -1,11 +1,9 @@
 .email-subcribe-section-container{
-        background-color: var(--white);
-        width:100%;
-    &__inner{
         margin: 0 auto;
+        padding: 0 5rem;
         max-width: 124rem;
+    &__inner{
         background-color: var(--light-blue);
-        width:93%;
         height:20.5rem;
         display:flex;
         justify-content: space-around;
