--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -7,7 +7,6 @@
         grid-template-columns: repeat(4,1fr);
         justify-items:center;
         gap:30px;
-        width:90%;
         &__container{
             display:flex;
             flex-direction: column;
@@ -38,6 +37,7 @@
     }
     &__footer-links .link-list-item {
         display:flex;
+        justify-content: start;
         gap:15px;
         padding-bottom: 5rem;
         }
