--- a/scss/_netflix-packages.scss
+++ b/scss/_netflix-packages.scss
@@ -1,54 +1,61 @@
 .netflix-packages-section-container {
-    background-color: var(--white);
-    margin: 0 auto;
-    max-width: 124rem;
-    padding: 0 5rem;
-    & h2 {
+  background-color: var(--white);
+  margin: 0 auto;
+  max-width: 124rem;
+  padding: 0 5rem;
+  & h2 {
+    font-size: 2.4rem;
+    font-weight: 700;
+    color: var(--dark-gray);
+    text-align: center;
+  }
+  &__card-container__item {
+    background-color: var(--light-gray);
+    width:50rem;
+    height: 30rem;
+    display: flex;
+    align-items:center;
+    justify-content: center;
+    gap:3px;
+    border-radius: 16px;
+
+    & img{
+      width:50%;
+    }
+
+    & p {
+      font-size: 2rem;
+      font-weight:600;
+      line-height:4rem;
+    }
+
+    & span {
       font-size: 2.4rem;
-      font-weight: 700;
-      color: var(--dark-gray);
-      text-align: center;
+      color: var(--light-blue);
+      line-height:7rem;
+      font-weight: 600; 
     }
-    &__card-container__item {
-      background-color: var(--light-gray);
-      width:50rem;
-      height: 30rem;
-      display: flex;
-      align-items:center;
-      justify-content: center;
-      gap:10px;
-      border-radius: 16px;
-      
-      & p {
-        font-size: 2rem;
-        font-weight:600;
-        line-height:4rem;
-      }
 
-      & span {
-        font-size: 2.4rem;
-        color: var(--light-blue);
-        line-height:7rem;
-        font-weight: 600; 
-      }
-
-      &__content{
-        display:flex;
-        align-self: center;
-        flex-direction: column;
-      }
+    &__content{
+      display:flex;
+      align-self: center;
+      flex-direction: column;
     }
   }
-  
-  .netflix-packages-section-container__card-container {
-    padding:5rem 0;
-    grid-template-columns:repeat(auto-fit,minmax(50rem,1fr));
-    // display:flex;
-    align-items: center;
-    justify-items: center;
-    gap:0px;
-    // flex-wrap:wrap;
-    // gap:30px;
-  }
+}
 
-  
+.netflix-packages-section-container__card-container {
+  padding:5rem 0;
+  display:flex;
+  align-items: center;
+  justify-content: center;
+  gap:20px;
+  flex-wrap:wrap;
+  @media screen and (max-width:23em){
+    padding:2rem 0;
+  }
+}
+.btn--netflix{
+  align-self:start;
+}
+
