--- a/scss/_helperclasses.scss
+++ b/scss/_helperclasses.scss
@@ -31,7 +31,7 @@
     display: block;
     background-color: var(--dark-blue);
     color:var(--white);
-    padding: 10px 44px 10px 44px;
+    padding: 1rem 2.5rem;
     border-radius: 8px;
     -webkit-border-radius: 8px;
     -moz-border-radius: 8px;
