--- a/scss/_active-Promotions.scss
+++ b/scss/_active-Promotions.scss
@@ -1,5 +1,9 @@
 .active-promotions-section-container{
     background-color: var(--white);
+    @media screen and (max-width:48em){
+      padding:0 2rem;
+   }
+    
     
     & h2 {
       font-size: 2.4rem;
@@ -10,8 +14,20 @@
         padding:5rem  0;
         display:grid;
         grid-template-columns:repeat(3,1fr);
-        grid-row:repeat(2,1fr);
+        grid-template-rows:repeat(2,1fr);
         gap:29px;
+         
+          @media screen and (max-width:48em){
+            font-size:1rem;
+            gap:10px;
+         }
+         @media screen and (max-width:30em){
+          grid-template-columns:1fr;
+          grid-template-rows:auto;
+       }
+       & figure {
+        margin:0;
+       }
    
         & figure img{
             display: block;
@@ -30,8 +46,10 @@
             background-position:center;
             background-repeat: no-repeat;
             border-radius:16px;
-            grid-row:auto/span 2;
-            
+            grid-row:auto/span 2;     
+            @media screen and (max-width:30em){
+              grid-rows:auto;
+           }     
         }
       &__middle-image{
         display:flex;
@@ -60,6 +78,10 @@
             }
             & .globe--2{
                 grid-column:3/-1 ;
+                @media screen and (max-width:30em){
+                  grid-columns:auto;
+               }
+                
             } 
     }
 
@@ -68,5 +90,12 @@
 .btn--secondary{
     color:var(--light-blue);
     background-color:var(--white);
+    @media screen and (max-width:64em){
+       font-size:1.5rem;
+    }
+    @media screen and (max-width:48em){
+      font-size:1.2rem;
+      padding:1rem;
+   }
 }
 
