--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -6,7 +6,7 @@
   --light-gray: #f6f4fc;
   --navy-dark-Blue: #0d153a;
   --pale-blue:#E1F3F5;
-  --dark-gray:#2A2A2A:
+  --dark-gray:#2A2A2A;
 }
 
 // /* Clash Display
