--- a/scss/_email-subscribe.scss
+++ b/scss/_email-subscribe.scss
@@ -1,77 +1,112 @@
-.email-subcribe-section-container{
-        margin: 0 auto;
-        padding: 0 5rem;
-        max-width: 124rem;
-    &__inner{
-        background-color: var(--light-blue);
-        height:20.5rem;
-        display:flex;
-        align-items: center;
-        justify-content: center;
-        padding:3rem;
-        border-radius: 16px;
-         -webkit-border-radius: 16px;
-        -moz-border-radius: 16px;
-        -ms-border-radius: 16px;
-        -o-border-radius: 16px;
-        &--left{
-            width:50%;
-            & h2{
-                font-size: 4rem;
-                font-weight:700;
-                line-height: 50px;
-                color:var(--white);
-            }
-            & p{
-                font-size: 2rem;
-                font-weight:400;
-                line-height: 50px;
-                color:var(--white);
-            }
-        }
-        &--right{
-            display: flex;
-            gap:1rem;
-            width:50%;
-            flex-wrap:wrap;
-            justify-content:start;
-            & form input{
-                width:25%;
-                position: relative;
-                background-color: transparent;
-                height:5.2rem;
-                width:32.1rem;
-                outline:none;
-                border:solid 2px #ffff;
-                padding:1rem;
-                border-radius: 4px;
-                -webkit-border-radius: 4px;
-                -moz-border-radius: 4px;
-                -ms-border-radius: 4px;
-                -o-border-radius: 4px;
-            }
-            & form input::placeholder{
-                color:rgb(255, 255, 255,0.5);
-            }
-            & form label{
-                height:1rem;
-                width:1rem;
-                z-index: 100;
-                background-color: var(--light-blue);
-                color:var(--white);
-                position: relative;
-                top:-50%;
-                left:15%;
-            }
-        }
+.email-subcribe-section-container {
+  @media screen and (max-width: 48em) {
+    padding: 0 2rem;
+  }
+  @media screen and (max-width: 23em) {
+    padding: 0;
+  }
+  &__inner {
+    background-color: var(--light-blue);
+    height: 20.5rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 3rem;
+    border-radius: 16px;
+    -webkit-border-radius: 16px;
+    -moz-border-radius: 16px;
+    -ms-border-radius: 16px;
+    -o-border-radius: 16px;
+    @media screen and (max-width: 23em) {
+      flex-direction: column;
+      background-color: var(--navy-dark-Blue);
+      height: 40rem;
+      width: 100%;
+      padding: 0;
+      border-radius: 0px;
+      gap: 20px;
+      align-items: center;
     }
-}
+    &--left {
+      width: 50%;
+      @media screen and (max-width: 23em) {
+        width: 100%;
+        text-align: center;
+      }
+      & h2 {
+        font-size: 4rem;
+        font-weight: 700;
+        line-height: 50px;
+        color: var(--white);
+      }
+      & p {
+        font-size: 2rem;
+        font-weight: 400;
+        color: var(--white);
+      }
+    }
+    &--right {
+      display: flex;
+      gap: 1rem;
+      width: 50%;
+      flex-wrap: wrap;
+      justify-content: start;
+      @media screen and (max-width: 23em) {
+        width: 80%;
+        flex-direction: column;
+      }
+      & form {
+        position: relative;
+      }
 
-.btn--secondary--email{
-    border-radius:4px;
-    -webkit-border-radius:4px;
-    -moz-border-radius:4px;
-    -ms-border-radius:4px;
-    -o-border-radius:4px;
-}
+      & form input {
+        width: 25%;
+        background-color: transparent;
+        height: 5.2rem;
+        width: 32.1rem;
+        outline: none;
+        border: solid 2px #ffff;
+        padding: 1rem;
+        border-radius: 4px;
+        -webkit-border-radius: 4px;
+        -moz-border-radius: 4px;
+        -ms-border-radius: 4px;
+        -o-border-radius: 4px;
+        @media screen and (max-width: 64em) {
+          width: 20.1rem;
+        }
+        @media screen and (max-width: 23em) {
+          width: 100%;
+        }
+      }
+      & form input::placeholder {
+        color: rgba(255, 255, 255, 0.5);
+      }
+      & form label {
+        padding: 0.1rem;
+        z-index: 100;
+        background-color: var(--light-blue);
+        color: var(--white);
+        position: absolute;
+        top: -20%;
+        left: 5%;
+        @media screen and (max-width: 23em) {
+          background-color: var(--navy-dark-Blue);
+        }
+      }
+    }
+  }
 
+  .btn--secondary--email {
+    padding: 1rem 2.5rem;
+    border-radius: 4px;
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    -ms-border-radius: 4px;
+    -o-border-radius: 4px;
+    @media screen and (max-width: 23em) {
+      color: var(--navy-dark-Blue);
+      align-self: center;
+    }
+  }
+}
