--- a/scss/_netflix-packages.scss
+++ b/scss/_netflix-packages.scss
@@ -3,6 +3,9 @@
   @media screen and (max-width:64em){
     font-size:1.5rem;
  }
+ @media screen and (max-width:30em){
+   padding:0 2rem;
+}
   & h2 {
     font-size: 2.4rem;
     font-weight: 700;
