--- a/scss/_email-subscribe.scss
+++ b/scss/_email-subscribe.scss
@@ -2,7 +2,7 @@
   @media screen and (max-width: 48em) {
     padding: 0 2rem;
   }
-  @media screen and (max-width: 23em) {
+  @media screen and (max-width: 30em) {
     padding: 0;
   }
   &__inner {
@@ -17,21 +17,22 @@
     -moz-border-radius: 16px;
     -ms-border-radius: 16px;
     -o-border-radius: 16px;
-    @media screen and (max-width: 23em) {
+    @media screen and (max-width: 30em) {
       flex-direction: column;
       background-color: var(--navy-dark-Blue);
-      height: 40rem;
       width: 100%;
-      padding: 0;
+      height: auto;
       border-radius: 0px;
       gap: 20px;
       align-items: center;
+      padding: 0;
     }
     &--left {
       width: 50%;
-      @media screen and (max-width: 23em) {
+      @media screen and (max-width: 30em) {
         width: 100%;
         text-align: center;
+        padding-top: 5rem;
       }
       & h2 {
         font-size: 4rem;
@@ -51,7 +52,7 @@
       width: 50%;
       flex-wrap: wrap;
       justify-content: start;
-      @media screen and (max-width: 23em) {
+      @media screen and (max-width: 30em) {
         width: 80%;
         flex-direction: column;
       }
@@ -75,7 +76,7 @@
         @media screen and (max-width: 64em) {
           width: 20.1rem;
         }
-        @media screen and (max-width: 23em) {
+        @media screen and (max-width: 30em) {
           width: 100%;
         }
       }
@@ -90,7 +91,7 @@
         position: absolute;
         top: -20%;
         left: 5%;
-        @media screen and (max-width: 23em) {
+        @media screen and (max-width: 30em) {
           background-color: var(--navy-dark-Blue);
         }
       }
@@ -104,7 +105,7 @@
     -moz-border-radius: 4px;
     -ms-border-radius: 4px;
     -o-border-radius: 4px;
-    @media screen and (max-width: 23em) {
+    @media screen and (max-width: 30em) {
       color: var(--navy-dark-Blue);
       align-self: center;
     }
