--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -4,17 +4,36 @@
   margin-top: -10rem;
   background-color: var(--navy-dark-Blue);
   color: var(--white);
-  // overflow: hidden !important;
+  @media screen and (max-width: 30em) {
+    margin-top: -1rem;
+  }
+
   &_inner {
-    padding: 20rem 0 3rem 0;
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    justify-items: center;
-    gap: 10px;
+    padding: 20rem 0 0 0;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 5px;
+    width: 100%;
+    justify-content: space-around;
+    @media screen and (max-width: 30em) {
+      width: 90%;
+      flex-direction: column;
+      align-items: start;
+      text-align: start;
+      gap: 30px;
+      padding: 1rem 0 1rem;
+    }
     &__container {
+      padding: 5rem 0 5rem 0;
       display: flex;
       flex-direction: column;
       gap: 10px;
+      width: 23%;
+      @media screen and (max-width: 30em) {
+        width: 100%;
+        align-items: start;
+        padding: 0rem;
+      }
       & div {
         font-size: 3.6rem;
         font-weight: 700;
@@ -24,6 +43,12 @@
         font-size: 3.2rem;
         font-weight: 700;
         color: var(--white);
+        @media screen and (max-width: 48em) {
+          font-size: 2rem;
+        }
+        @media screen and (max-width: 30em) {
+          font-size: 3rem;
+        }
       }
       & .link-list-item {
         display: flex;
@@ -39,10 +64,26 @@
       }
     }
   }
-  &__footer-links .link-list-item {
-    display: flex;
-    justify-content: start;
-    gap: 15px;
-    padding-bottom: 5rem;
+  &__footer-links {
+    width: 100%;
+    justify-self: flex-start;
+    padding-left: 2rem;
+    @media screen and (max-width: 30em) {
+      display: none;
+    }
+    & .link-list-item {
+      display: flex;
+      justify-content: start;
+      gap: 15px;
+      padding-bottom: 3.5rem;
+    }
+  }
+}
+
+.logo {
+  padding-left: 2rem;
+  @media screen and (max-width: 64em) {
+    padding-left: 0rem;
+    padding-top: 5rem;
   }
 }
