--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,5 +1,5 @@
 @import "customvariables";
-@import "..bootstrap-5.3.2/scss/bootstrap.scss";
+@import "bootstrap-5.3.2/scss/bootstrap.scss";
 @import "variables";
 @import "base";
 @import "helperclasses";
