--- a/scss/_active-Promotions.scss
+++ b/scss/_active-Promotions.scss
@@ -53,7 +53,7 @@
     }
     &__middle-image {
       display: flex;
-      gap: 5px;
+      gap: 20px;
       flex-direction: column;
       align-items: center;
       justify-content: flex-start;
@@ -69,10 +69,11 @@
       flex-direction: column;
       align-items: center;
       justify-content: center;
-      gap: 5px;
+      gap: 20px;
       background-color: var(--gray);
       padding: 2rem;
       height: 30rem;
+      text-align: center;
       border-radius: 16px;
       -webkit-border-radius: 16px;
       -moz-border-radius: 16px;
