--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -9,7 +9,7 @@
   }
 
   &_inner {
-    padding: 20rem 0 0 0;
+    padding: 20rem 2rem 0;
     display: flex;
     flex-wrap: wrap;
     gap: 5px;
@@ -65,9 +65,8 @@
     }
   }
   &__footer-links {
-    width: 100%;
+    margin-right: auto;
     justify-self: flex-start;
-    padding-left: 2rem;
     @media screen and (max-width: 30em) {
       display: none;
     }
@@ -77,13 +76,5 @@
       gap: 15px;
       padding-bottom: 3.5rem;
     }
-  }
-}
-
-.logo {
-  padding-left: 2rem;
-  @media screen and (max-width: 64em) {
-    padding-left: 0rem;
-    padding-top: 5rem;
   }
 }
