--- a/scss/_Best-selling-product.scss
+++ b/scss/_Best-selling-product.scss
@@ -12,6 +12,9 @@
   }
   & h2 {
     padding-top: 3rem;
+    @media screen and (max-width: 23em) {
+      padding-top: 2rem;
+    }
   }
 
   &__inner__card {
@@ -25,7 +28,7 @@
     -moz-border-radius: 16px;
     -ms-border-radius: 16px;
     -o-border-radius: 16px;
-    @media screen and (max-width: 23em) {
+    @media screen and (max-width: 30em) {
       width: 100%;
     }
     &__discount-off {
@@ -116,10 +119,13 @@
   padding: 3rem 0;
   display: flex;
   align-items: center;
-  justify-content: space-around;
+  // justify-content: space-between;
   flex-wrap: wrap;
   gap: 2rem;
   justify-items: start;
+  // @media screen and (max-width: 48em) {
+  //   justify-content: center;
+  // }
 }
 .Best-selling-product-bg-container--top-product {
   background-color: var(--white);
