--- a/scss/_active-Promotions.scss
+++ b/scss/_active-Promotions.scss
@@ -1,9 +1,5 @@
 .active-promotions-section-container {
   background-color: var(--white);
-  @media screen and (max-width: 48em) {
-    padding: 0 2rem;
-  }
-
   & h2 {
     font-size: 2.4rem;
     font-weight: 700;
@@ -19,11 +15,13 @@
 
     @media screen and (max-width: 48em) {
       font-size: 1rem;
-      gap: 10px;
+      gap: 15px;
     }
     @media screen and (max-width: 30em) {
       grid-template-columns: 1fr;
-      grid-template-rows: auto;
+      grid-template-rows: 1fr;
+      column-gap: 15px;
+      padding: 5rem 0;
     }
     & figure {
       margin: 0;
@@ -48,7 +46,7 @@
       border-radius: 16px;
       grid-row: auto/span 2;
       @media screen and (max-width: 30em) {
-        grid-row: auto;
+        grid: row 0;
       }
     }
     &__middle-image {
@@ -59,7 +57,7 @@
       justify-content: flex-start;
       padding: 2rem;
       @media screen and (max-width: 30em) {
-        padding: 5.5rem;
+        padding: 5rem;
       }
     }
 
@@ -83,7 +81,7 @@
     & .globe--2 {
       grid-column: 3/-1;
       @media screen and (max-width: 30em) {
-        grid-columns: auto;
+        grid-column: 1/-1;
       }
     }
   }
@@ -92,6 +90,7 @@
 .btn--secondary {
   color: var(--light-blue);
   background-color: var(--white);
+  white-space: nowrap;
 
   @media screen and (max-width: 48em) {
     font-size: 1.2rem;
